--- a/packages/threejs-demo/package.json
+++ b/packages/threejs-demo/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@realityshell/demo",
+    "name": "@realityshell/threejs-demo",
     "version": "0.1.0",
     "type": "module",
     "scripts": {
