--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@types/jest": "^29.5.7",
+    "jest": "^29.7.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@realityshell/ecs": "workspace:^",
+    "@realityshell/example-boxworld": "workspace:^",
     "@realityshell/threejs-demo": "workspace:^",
     "@realityshell/threejs-webgl-xr-renderer": "workspace:^",
-    "piecs": "workspace:^"
+    "ts-jest": "^29.1.1"
   }
 }
