--- a/packages/example-boxworld/package.json
+++ b/packages/example-boxworld/package.json
@@ -14,6 +14,8 @@
         "vite": "^4.5.0"
     },
     "dependencies": {
-        "@realityshell/ecs": "workspace:^"
+        "@realityshell/ecs": "workspace:^",
+        "@realityshell/engine": "workspace:^",
+        "gl-matrix": "^3.4.3"
     }
 }
