--- a/packages/example-boxworld/tsconfig.json
+++ b/packages/example-boxworld/tsconfig.json
@@ -1,8 +1,20 @@
 {
     "compilerOptions": {
-        "composite": true,
-        "moduleResolution": "Bundler",
-        "module": "ES2020"
-    },
+        "target": "ES2020",
+        "useDefineForClassFields": true,
+        "module": "ESNext",
+        "lib": ["ES2020", "DOM", "DOM.Iterable"],
+        "skipLibCheck": true,
+        "moduleResolution": "bundler",
+        "allowImportingTsExtensions": true,
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "strict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noFallthroughCasesInSwitch": true,
+        "composite": true
+      },
     "include": ["src/*"]
 }
