--- a/packages/example-boxworld/package.json
+++ b/packages/example-boxworld/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@realityshell/ecs": "workspace:^",
         "@realityshell/engine": "workspace:^",
+        "@realityshell/loader-rssg": "workspace:^",
         "gl-matrix": "^3.4.3",
         "libtess": "^1.2.2"
     }
