--- a/packages/engine/tsconfig.json
+++ b/packages/engine/tsconfig.json
@@ -16,5 +16,5 @@
         "noFallthroughCasesInSwitch": true,
         "composite": true
       },
-    "include": ["src/*"]
+    "include": ["src/**/*"]
 }
